--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
       href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <!-- Feel free to remove these styles or customise in your own stylesheet  -->
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
         font-size: 11px;
