--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       <nav class="navbar px-5 py-4 navbar-expand-lg navbar-light nav-bg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
-            ><span class="nav-logo white-text">sunnyside</span></a
-          >
+            ><img src="./assets/images/logo.svg" alt="sunnyside" width="150px"
+          /></a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler border-0"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -54,36 +54,27 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <img src="./assets/images/icon-hamburger.svg" alt="" />
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item me-4">
-                <a class="nav-link white-text" aria-current="page" href="#"
+                <a class="nav-link white-text fs-5" aria-current="page" href="#"
                   >About</a
                 >
               </li>
               <li class="nav-item me-4">
-                <a class="nav-link white-text" href="#">Services</a>
+                <a class="nav-link white-text fs-5" href="#">Services</a>
               </li>
               <li class="nav-item me-4">
-                <a class="nav-link white-text" href="#">Projects</a>
+                <a class="nav-link white-text fs-5" href="#">Projects</a>
               </li>
               <li class="nav-item me-4">
-                <div class="white">
-                  <a
-                    class="nav-link white-text btn btn-light text-black rounded-pill px-4 py-2 text-uppercase nav-btn font-fraunces"
-                    href="#"
-                    >Contact</a
-                  >
-                </div>
-                <div class="yellow">
-                  <a
-                    class="nav-link white-text btn btn-warning text-black rounded-pill px-4 py-2 text-uppercase nav-btn font-fraunces"
-                    href="#"
-                    >Contact</a
-                  >
-                </div>
+                <a
+                  class="nav-link white-text btn btn-light text-black rounded-pill px-4 py-2 text-uppercase nav-btn font-fraunces"
+                  href="#"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
@@ -97,16 +88,18 @@
           <img src="./assets/images/icon-arrow-down.svg" alt="" />
         </div>
       </section>
-
+      <!-- Section 2 -->
       <div class="">
         <!-- Transform section -->
         <div
           class="d-flex justify-content-center align-items-center flex-xl-row flex-column-reverse"
         >
           <div class="col-xl-6 px-xl-5">
-            <div class="px-5 py-5 text-lg-start text-center">
+            <div class="px-5 py-5 text-xl-start text-center">
               <h1 class="font-fraunces py-3">Transform your brand</h1>
-              <p class="font-barlow color-dark-grayish-blue lh-lg fs-5 pe-xl-5">
+              <p
+                class="font-barlow color-dark-grayish-blue lh-lg fs-5 pe-xl-5 font-size-18"
+              >
                 We are a full-service creative agency specializing in helping
                 brands grow fast. Engage your clients through compelling visuals
                 that do most of the marketing for you.
@@ -118,7 +111,7 @@
               >
             </div>
           </div>
-          <div class="col-xl-6 col-xl-2">
+          <div class="col-xl-6">
             <div class="w-100">
               <img
                 src="./assets/images/desktop/image-transform.jpg"
@@ -130,9 +123,9 @@
         </div>
         <!-- Stand out section -->
         <div
-          class="d-flex justify-content-center align-items-center flex-lg-row flex-column"
+          class="d-flex justify-content-center align-items-center flex-xl-row flex-column"
         >
-          <div class="col-xl-6 col-xl-2">
+          <div class="col-xl-6">
             <div class="w-100">
               <img
                 src="./assets/images/desktop/image-stand-out.jpg"
@@ -142,11 +135,13 @@
             </div>
           </div>
           <div class="col-xl-6 px-xl-5">
-            <div class="px-5 py-5 text-lg-start text-center">
+            <div class="px-5 py-5 text-xl-start text-center">
               <h1 class="font-fraunces py-3">
                 Stand out to the right audience
               </h1>
-              <p class="font-barlow color-dark-grayish-blue lh-lg fs-5 pe-xl-5">
+              <p
+                class="font-barlow color-dark-grayish-blue lh-lg fs-5 pe-xl-5 font-size-18"
+              >
                 Using a collaborative formula of designers, researchers,
                 photographers, videographers, and copywriters, we’ll build and
                 extend your brand in digital places.
@@ -160,28 +155,142 @@
           </div>
         </div>
       </div>
-      <p>
-        Learn more Graphic design Great design makes you memorable. We deliver
-        artwork that underscores your brand message and captures potential
-        clients’ attention. Photography Increase your credibility by getting the
-        most stunning, high-quality photos that improve your business image.
-        Client testimonials We put our trust in Sunnyside and they delivered,
-        making sure our needs were met and deadlines were always hit. Emily R.
-        Marketing Director Sunnyside’s enthusiasm coupled with their keen
-        interest in our brand’s success made it a satisfying and enjoyable
-        experience. Thomas S. Chief Operating Officer Incredible end result! Our
-        sales increased over 400% when we worked with Sunnyside. Highly
-        recommended! Jennie F. Business Owner About Services Projects Contact
-      </p>
-
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-        <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-        <script src="./assets/js/app.js"></script>
+      <!-- Section 3 -->
+      <div
+        class="d-flex justify-content-center align-items-center flex-column flex-lg-row"
+      >
+        <div
+          class="col-xl-6 d-flex justify-content-end align-items-center bg-graphic-design flex-column text-center px-xl-5 graphic-design-text"
+        >
+          <h2 class="font-fraunces pt-3 pb-3">Graphic design</h2>
+          <p class="font-barlow lh-lg px-5 font-size-18 pb-4">
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients’
+            attention.
+          </p>
+        </div>
+        <div
+          class="col-xl-6 d-flex justify-content-end align-items-center bg-photography flex-column text-center px-xl-5 photography-text"
+        >
+          <h2 class="font-fraunces pt-3 pb-3">Photography</h2>
+          <p class="font-barlow lh-lg px-5 font-size-18 pb-4 w-75">
+            Increase your credibility by getting the most stunning, high-quality
+            photos that improve your business image.
+          </p>
+        </div>
       </div>
+      <!-- Section 4 -->
+      <div class="py-5">
+        <div class="text-center pt-xl-5">
+          <h2 class="font-fraunces text-uppercase grayish-blue py-5">
+            Client Testimonials
+          </h2>
+          <div
+            class="d-flex justify-content-center align-items-center flex-xl-row flex-column px-xl-5 py-xl-4"
+          >
+            <div class="col-xl-4 w-xl-50 px-xl-5 px-4">
+              <img
+                src="./assets/images/image-emily.jpg"
+                class="rounded-circle w-25 my-5"
+                alt=""
+              />
+              <p
+                class="font-barlow font-size-18 very-dark-grayish-blue lh-lg pb-xl-5 pb-2"
+              >
+                We put our trust in Sunnyside and they delivered, making sure
+                our needs were met and deadlines were always hit.
+              </p>
+              <span class="font-fraunces font-size-18 fw-900 pt-5"
+                >Emily R.</span
+              >
+              <p class="font-barlow font-size-18 grayish-blue small pt-2">
+                Marketing Director
+              </p>
+            </div>
+            <div class="col-xl-4 w-xl-50 px-xl-5 px-4">
+              <img
+                src="./assets/images/image-thomas.jpg"
+                class="rounded-circle w-25 my-5"
+                alt=""
+              />
+              <p
+                class="font-barlow font-size-18 very-dark-grayish-blue lh-lg pb-xl-5 pb-2"
+              >
+                Sunnyside’s enthusiasm coupled with their keen interest in our
+                brand’s success made it a satisfying and enjoyable experience.
+              </p>
+              <span class="font-fraunces font-size-18 fw-900 pt-5"
+                >Thomas S.</span
+              >
+              <p class="font-barlow font-size-18 grayish-blue small pt-2">
+                Chief Operating Officer
+              </p>
+            </div>
+            <div class="col-xl-4 w-xl-50 px-xl-5 px-4">
+              <img
+                src="./assets/images/image-jennie.jpg"
+                class="rounded-circle w-25 my-5"
+                alt=""
+              />
+              <p
+                class="font-barlow font-size-18 very-dark-grayish-blue lh-lg pb-xl-5 pb-2"
+              >
+                Incredible end result! Our sales increased over 400% when we
+                worked with Sunnyside. Highly recommended!
+              </p>
+              <span class="font-fraunces font-size-18 fw-900 pt-5"
+                >Jennie F.</span
+              >
+              <p class="font-barlow font-size-18 grayish-blue small pt-2">
+                Business Owner
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 4 images section -->
+
+      <div
+        class="d-flex justify-content-start align-items-center flex-xl-row flex-column pt-5"
+      >
+        <img
+          src="./assets/images/mobile/image-gallery-milkbottles.jpg"
+          alt=""
+          class="w-100"
+        />
+
+        <img
+          src="./assets/images/mobile/image-gallery-orange.jpg"
+          alt=""
+          class="w-100"
+        />
+
+        <img
+          src="./assets/images/mobile/image-gallery-cone.jpg"
+          alt=""
+          class="w-100"
+        />
+
+        <img
+          src="./assets/images/mobile/image-gallery-sugar-cubes.jpg"
+          alt=""
+          class="w-100"
+        />
+      </div>
+      <footer class="dark-moderate-cyan">
+        <img src="./assets/images/logo.svg" class="svg-footer" alt="" />
+        <div class="">
+          <div class="">About Services Projects Contact</div>
+        </div>
+      </footer>
     </main>
   </body>
+  <div class="attribution">
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      >Frontend Mentor</a
+    >. Coded by <a href="#">Your Name Here</a>.
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="./assets/js/app.js"></script>
+  </div>
 </html>
