responsive mobile size

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <body>
     <main>
       <!-- Navigation menu -->
-      <nav class="navbar px-5 py-4 navbar-expand-lg navbar-light nav-bg">
+      <nav class="navbar px-xl-5 py-4 navbar-expand-lg navbar-light nav-bg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
             ><img src="./assets/images/logo.svg" alt="sunnyside" width="150px"
@@ -58,8 +58,8 @@
           >
             <img src="./assets/images/icon-hamburger.svg" alt="" />
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mobile-nav">
               <li class="nav-item me-4">
                 <a class="nav-link white-text fs-5" aria-current="page" href="#"
                   >About</a
