--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
           <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mobile-nav">
               <li class="nav-item me-4">
-                <a class="nav-link white-text fs-5" aria-current="page" href="#"
+                <a class="font-barlow nav-link white-text fs-5" aria-current="page" href="#"
                   >About</a
                 >
               </li>
               <li class="nav-item me-4">
-                <a class="nav-link white-text fs-5" href="#">Services</a>
+                <a class="font-barlow nav-link white-text fs-5" href="#">Services</a>
               </li>
               <li class="nav-item me-4">
-                <a class="nav-link white-text fs-5" href="#">Projects</a>
+                <a class="font-barlow nav-link white-text fs-5" href="#">Projects</a>
               </li>
               <li class="nav-item me-4">
                 <a
