--- a/index.html
+++ b/index.html
@@ -303,19 +303,19 @@
           </div>
           <div class="icon d-flex justify-content-center align-items-center pt-5">
             <a href="#"
-            ><img src="./assets/images/icon-facebook.svg" class="pe-4" alt="" /></a>
+            ><img src="./assets/images/icon-facebook.svg" class="pe-4" alt="facebook icon" /></a>
 
              <a href=""><img
                 src="./assets/images/icon-instagram.svg"
                 class="pe-4"
-                alt=""
+                alt="instagram icon"
               /></a> 
             </a>
             <a href="#"
-              ><img src="./assets/images/icon-twitter.svg" class="pe-4" alt=""
+              ><img src="./assets/images/icon-twitter.svg" class="pe-4" alt="twitter icon"
             /></a>
             <a href="#"
-              ><img src="./assets/images/icon-pinterest.svg" alt=""
+              ><img src="./assets/images/icon-pinterest.svg" alt="pinterest icon"
             /></a>
           </div>
           <div class="font-barlow py-5 attribution">
